实现用户认证

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>欢迎登录API接口文档</h1>
-<form action="/user/login" method="post">
-    <p><input type="text" name="username"/></p>
-    <p><input type="text" name="password"/></p>
+<form action="/user/loginSwaggerUi" method="post">
+    <p><input type="text" name="userPhone"/></p>
+    <p><input type="text" name="userPassword"/></p>
     <p><input type="submit" value="登录"/></p>
 </form>
 </body>
