--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>欢迎登录API接口文档</h1>
-<form action="/user/loginSwaggerUi" method="post">
+<form action="/user/login" method="post">
     <p><input type="text" name="userPhone"/></p>
     <p><input type="text" name="userPassword"/></p>
     <p><input type="submit" value="登录"/></p>
